<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="br.com.weis.exernac.PesquisarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPesquisarChamados"
        android:textSize="35dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/txtCodigoFuncionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblCodigoFuncionario"
        android:inputType="number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPesquisar"
        android:onClick="pesquisar"/>

    <ListView
        android:id="@+id/lstChamados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

    </ListView>

</LinearLayout>
