<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.weis.exernac.CadastroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_gravity="center"
        android:text="@string/lblCadastroChamado" />
    
    <EditText
        android:id="@+id/txtCodigoFuncionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Spinner
        android:id="@+id/snTipoChamado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/TipoChamado">

    </Spinner>

    <CheckBox
        android:id="@+id/chFinalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblFinalizado"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCadastrar"
        android:onClick="cadastrar"/>
</LinearLayout>
